replaced goals.csv and updated code

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -903,11 +903,9 @@
     "            + 1\n",
     "        )\n",
     "        updated_df[\"weekday\"] = updated_df.game_date.dt.day_name()\n",
-    "    updated_df = (\n",
-    "        updated_df.drop_duplicates()\n",
-    "        .sort_values(sort_cols[df_name])\n",
-    "        .reset_index(drop=True)\n",
-    "    )\n",
+    "    \n",
+    "    updated_df = updated_df.sort_values(sort_cols[df_name]).reset_index(drop=True)\n",
+    "\n",
     "    updated_df.to_csv(f\"./data/{df_name}.csv\", index=False)\n",
     "    return updated_df\n",
     "\n",
