fixed Salford atttendance

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -903,6 +903,9 @@
     "            + 1\n",
     "        )\n",
     "        updated_df[\"weekday\"] = updated_df.game_date.dt.day_name()\n",
+    "\n",
+    "        updated_df.loc[updated_df.game_date == \"2023-08-19\", \"attendance\"] = 5594\n",
+    "\n",
     "    \n",
     "    updated_df = updated_df.sort_values(sort_cols[df_name]).reset_index(drop=True)\n",
     "\n",
