fixed bug when no cards

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,27 +727,35 @@
     "\n",
     "    def get_yellow_cards(self):\n",
     "        cards = self.cards\n",
-    "        yellows = (\n",
-    "            cards.query(\"card_type == 'yellow-card'\")\n",
-    "            .rename(columns={\"minute\": \"min_yc\"})\n",
-    "            .drop(columns=[\"card_type\"])\n",
-    "        )\n",
-    "        if yellows.empty:\n",
-    "            print(\"No yellow cards\")\n",
-    "            return None\n",
+    "        if not cards.empty:\n",
+    "            yellows = (\n",
+    "                cards.query(\"card_type == 'yellow-card'\")\n",
+    "                .rename(columns={\"minute\": \"min_yc\"})\n",
+    "                .drop(columns=[\"card_type\"])\n",
+    "            )\n",
+    "            if yellows.empty:\n",
+    "                print(\"No yellow cards\")\n",
+    "                return None\n",
+    "            else:\n",
+    "                return yellows\n",
     "        else:\n",
-    "            return yellows\n",
+    "            print(\"No yellow cards (No cards at all)\")\n",
+    "            return None\n",
     "\n",
     "    def get_red_cards(self):\n",
     "        cards = self.cards\n",
-    "        reds = (\n",
-    "            cards.query(\"card_type.str.contains('red')\")\n",
-    "            .rename(columns={\"minute\": \"min_so\"})\n",
-    "            .drop(columns=[\"card_type\"])\n",
-    "        )\n",
-    "        if reds.empty:\n",
-    "            print(\"No reds cards\")\n",
-    "        return reds\n",
+    "        if not cards.empty:\n",
+    "            reds = (\n",
+    "                cards.query(\"card_type.str.contains('red')\")\n",
+    "                .rename(columns={\"minute\": \"min_so\"})\n",
+    "                .drop(columns=[\"card_type\"])\n",
+    "            )\n",
+    "            if reds.empty:\n",
+    "                print(\"No reds cards\")\n",
+    "            return reds\n",
+    "        else:\n",
+    "            print(\"No red cards (No cards at all)\")\n",
+    "            return None\n",
     "\n",
     "    def get_subs(self):\n",
     "        player_subs = []\n",
@@ -806,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,11 +926,11 @@
     "\n",
     "    old_df = pd.read_csv(f\"./data/{df_name}.csv\", parse_dates=[\"game_date\"])\n",
     "\n",
-    "    print(f\"{len(updates)} possible updates found...\")\n",
-    "\n",
-    "    if updates.empty or updates is None:\n",
+    "    if updates is None or updates.empty:\n",
     "        print(f\"No updates required for {df_name.upper()}.\")\n",
     "    else:\n",
+    "        print(f\"{len(updates)} possible updates found...\")\n",
+    "        \n",
     "        updates = updates[~updates.game_date.isin(old_df.game_date)]\n",
     "\n",
     "        n_updates = len(updates)\n",
@@ -981,6 +989,15 @@
     "date_type = \"available\"\n",
     "\n",
     "main(date_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbc_api(\"2023-09-23\").get_lineup_url()"
    ]
   },
   {
