added function to scrape pre-match table

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -127,13 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "class league_table:\n",
-    "    def __init__(self, date, venue=None):\n",
-    "        self.date = date\n",
+    "    def __init__(self, date, pre_match=False, venue=None):\n",
+    "        if pre_match is True:\n",
+    "            self.date = self.get_prematch_date(date)\n",
+    "        else:\n",
+    "            self.date = date\n",
     "        self.venue = venue\n",
     "\n",
     "        self.url = self.get_url()\n",
@@ -146,6 +149,13 @@
     "        self.pos = self.get_pos()\n",
     "        self.pts = self.get_pts()\n",
     "\n",
+    "    \n",
+    "    def get_prematch_date(self, date):\n",
+    "        prev_day = pd.to_datetime(date) - pd.Timedelta(days=1)\n",
+    "        prev_day = prev_day.strftime(\"%Y-%m-%d\")\n",
+    "        return prev_day\n",
+    "    \n",
+    "    \n",
     "    def get_url(self):\n",
     "        year = self.date[:4]\n",
     "        month = pd.to_datetime(self.date).month_name().lower()\n",
