edited notebook to run on day

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -996,7 +996,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_type = \"available\"\n",
+    "date_type = \"today\"\n",
     "\n",
     "main(date_type)"
    ]
