fixed shootout bug

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
     "        if pen_gf > pen_ga:\n",
     "            pen_outcome = \"W\"\n",
     "        elif pen_gf < pen_ga:\n",
-    "            return \"L\"\n",
+    "            pen_outcome = \"L\"\n",
     "        pen_score = f\"{pen_gf}-{pen_ga}\"\n",
     "    else:\n",
     "        pen_outcome = None\n",
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,11 +867,11 @@
     "\n",
     "\n",
     "def check_dates(dates):\n",
-    "    f = fixtures()\n",
-    "\n",
     "    if dates in [\"played\", \"all\", \"available\"]:\n",
+    "        f = fixtures()\n",
     "        dates = f.played[\"game_date\"].dt.date.astype(str).unique().tolist()\n",
     "    else:\n",
+    "        f = fixtures(dates)\n",
     "        if f.today.empty:\n",
     "            print(\"No game today.\")\n",
     "            dates = None\n",
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
