added bbc table option

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "class league_table:\n",
-    "    def __init__(self, date, pre_match=False, venue=None):\n",
+    "    def __init__(self, date, pre_match=False, venue=None, table_source=\"11v11\"):\n",
     "        if pre_match is True:\n",
     "            self.date = self.get_prematch_date(date)\n",
     "        else:\n",
@@ -141,11 +141,14 @@
     "\n",
     "        self.url = self.get_url()\n",
     "\n",
-    "        r = requests.get(self.url, headers=get_headers())\n",
+    "        if table_source == \"11v11\":\n",
+    "            r = requests.get(self.url, headers=get_headers())\n",
     "\n",
-    "        self.tables = pd.read_html(r.content, flavor=\"bs4\")\n",
+    "            self.tables = pd.read_html(r.content, flavor=\"bs4\")\n",
+    "        elif table_source == \"bbc\":\n",
+    "            self.tables = pd.read_html(\"https://www.bbc.com/sport/football/league-two/table\", flavor=\"bs4\")\n",
     "\n",
-    "        self.table = self.get_table()\n",
+    "        self.table = self.get_table(table_source)\n",
     "        self.pos = self.get_pos()\n",
     "        self.pts = self.get_pts()\n",
     "\n",
@@ -170,9 +173,33 @@
     "            url += f\"{self.venue}\"\n",
     "        return url\n",
     "\n",
-    "    def get_table(self):\n",
+    "    def clean_bbc_table(self, df):\n",
+    "        df = df.rename(\n",
+    "            columns = {\n",
+    "                'Position': 'Pos',\n",
+    "                'Played': 'Pld',\n",
+    "                'Won': 'W',\n",
+    "                'Drawn': 'D',\n",
+    "                'Lost': 'L',\n",
+    "                'Goals For': 'GF',\n",
+    "                'Goals Against': 'GA',\n",
+    "                'Goal Difference': 'GD',\n",
+    "                'Points': 'Pts'\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "        df = df[[\"Pos\", \"Team\", \"Pld\", \"W\", \"D\", \"L\", \"GF\", \"GA\", \"GD\", \"Pts\"]]\n",
+    "\n",
+    "        return df\n",
+    "        \n",
+    "    \n",
+    "    def get_table(self, table_source):\n",
     "        table = self.tables[0]\n",
-    "        table.Pos = table.Pos.index + 1\n",
+    "\n",
+    "        if table_source == \"11v11\":\n",
+    "            table.Pos = table.Pos.index + 1\n",
+    "        elif table_source == \"bbc\":\n",
+    "            table = self.clean_bbc_table(table)\n",
     "        return table\n",
     "\n",
     "    def get_pos(self):\n",
@@ -192,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,8 +407,8 @@
     "        return \"Cup\"\n",
     "\n",
     "\n",
-    "def get_table(date):\n",
-    "    lge_table = league_table(date)\n",
+    "def get_table(date, table_source=\"11v11\"):\n",
+    "    lge_table = league_table(date, table_source)\n",
     "    pos = lge_table.pos\n",
     "    pts = lge_table.pts\n",
     "    return pos, pts\n",
@@ -535,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_match_df(date, data=None):\n",
+    "def get_match_df(date, data=None, table_source=\"11v11\"):\n",
     "    if data:\n",
     "        data = data\n",
     "    else:\n",
@@ -599,8 +626,8 @@
     "    stadium = data.stadium\n",
     "    referee = data.referee\n",
     "\n",
-    "    league_pos = get_table(date)[0] if game_type == \"League\" else None\n",
-    "    pts = get_table(date)[1] if game_type == \"League\" else None\n",
+    "    league_pos = get_table(date, table_source)[0] if game_type == \"League\" else None\n",
+    "    pts = get_table(date, table_source)[1] if game_type == \"League\" else None\n",
     "\n",
     "    match_record = [\n",
     "        {\n",
@@ -651,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +988,7 @@
     "    print(f\"\\n{border}\\n* {msg} *\\n{border}\\n\")\n",
     "\n",
     "\n",
-    "def main(date_req=None):\n",
+    "def main(date_req=None, table_source=\"11v11\"):\n",
     "    dates = check_dates(date_req)\n",
     "    existing_dates = get_existing_dates()\n",
     "\n",
@@ -973,7 +1000,7 @@
     "                print_msg(date)\n",
     "\n",
     "                match_data = bbc_api(date)\n",
-    "                res_updates = get_match_df(date, match_data)\n",
+    "                res_updates = get_match_df(date, match_data, table_source)\n",
     "\n",
     "                update_df(\"results\", res_updates)\n",
     "\n",
@@ -1000,7 +1027,7 @@
    "source": [
     "date_type = \"today\"\n",
     "\n",
-    "main(date_type)"
+    "main(date_type, table_source=\"bbc\")"
    ]
   },
   {
