edited updater script to fix league pos and pts error

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "class league_table:\n",
-    "    def __init__(self, date, pre_match=False, venue=None, table_source=\"11v11\"):\n",
+    "    def __init__(self, date, table_source, pre_match=False, venue=None):\n",
     "        if pre_match is True:\n",
     "            self.date = self.get_prematch_date(date)\n",
     "        else:\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
     "        return \"Cup\"\n",
     "\n",
     "\n",
-    "def get_table(date, table_source=\"11v11\"):\n",
+    "def get_table(date, table_source):\n",
     "    lge_table = league_table(date, table_source)\n",
     "    pos = lge_table.pos\n",
     "    pts = lge_table.pts\n",
@@ -562,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_match_df(date, data=None, table_source=\"11v11\"):\n",
+    "def get_match_df(date, table_source, data=None):\n",
     "    if data:\n",
     "        data = data\n",
     "    else:\n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
     "    print(f\"\\n{border}\\n* {msg} *\\n{border}\\n\")\n",
     "\n",
     "\n",
-    "def main(date_req=None, table_source=\"11v11\"):\n",
+    "def main(table_source, date_req=None):\n",
     "    dates = check_dates(date_req)\n",
     "    existing_dates = get_existing_dates()\n",
     "\n",
@@ -1000,7 +1000,8 @@
     "                print_msg(date)\n",
     "\n",
     "                match_data = bbc_api(date)\n",
-    "                res_updates = get_match_df(date, match_data, table_source)\n",
+    "\n",
+    "                res_updates = get_match_df(date, table_source, match_data)\n",
     "\n",
     "                update_df(\"results\", res_updates)\n",
     "\n",
@@ -1027,7 +1028,7 @@
    "source": [
     "date_type = \"today\"\n",
     "\n",
-    "main(date_type, table_source=\"bbc\")"
+    "main(table_source=\"bbc\")"
    ]
   },
   {
