--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,9 +740,15 @@
     "            player_apps.append(player_app)\n",
     "\n",
     "        apps_df = pd.DataFrame(player_apps)\n",
-    "        apps_df = apps_df.query(\n",
-    "            \"player_name.isin(@self.subs.player_name) | role == 'starter'\"\n",
-    "        )\n",
+    "\n",
+    "        if self.subs.empty:\n",
+    "            apps_df = apps_df.query(\n",
+    "                \"role == 'starter'\"\n",
+    "            )\n",
+    "        else:\n",
+    "            apps_df = apps_df.query(\n",
+    "                \"player_name.isin(@self.subs.player_name) | role == 'starter'\"\n",
+    "            )\n",
     "        return apps_df\n",
     "\n",
     "    def get_cards(self):\n",
@@ -853,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
