added name for associate members cup

--- a/automate-updates.ipynb
+++ b/automate-updates.ipynb
@@ -423,6 +423,7 @@
     "        \"League Two\": \"Football League\",\n",
     "        \"National League\": \"Non-League\",\n",
     "        \"Papa John's Trophy\": \"Associate Members' Cup\",\n",
+    "        \"Bristol Street Motors Trophy\": \"Associate Members' Cup\",\n",
     "        \"The Emirates FA Cup\": \"FA Cup\",\n",
     "    }\n",
     "    return generic_comps[competition]\n",
@@ -1032,8 +1033,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_type = \"today\"\n",
-    "\n",
     "main(table_source=\"bbc\")"
    ]
   },
